[package]
name = "koul_sort"
version = "0.1.0"
edition = "2021"
description = "KoulSort - A high-performance adaptive sorting algorithm"
authors = ["Koul"]

[lib]
name = "koul_sort"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
numpy = "0.22"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
